# data-acquisition-ros

./: .gitignore  README.md
script/: collect_data.sh
src/: .gitignore
src/img_collect/: CMakeLists.txt  package.xml
src/img_collect/include/: collect_node.h
src/img_collect/launch/: collect.launch
src/img_collect/src/: collect_node.cpp
src/realsense-ros/realsense2_camera/launch/: rs_camera.launch
src/realsense-ros/realsense2_camera/launch/includes/: nodelet.launch.xml
